--- a/.project
+++ b/.project
@@ -29,4 +29,11 @@
 		<nature>org.eclipse.cdt.managedbuilder.core.managedBuildNature</nature>
 		<nature>org.eclipse.cdt.managedbuilder.core.ScannerConfigNature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>Core/Inc/flashmap.h</name>
+			<type>1</type>
+			<locationURI>PROJECT_LOC/FlashROM/flashmap.h</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
