添加新的子模块：AVI 读取器模块。

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Phat"]
 	path = Phat
 	url = https://github.com/0xAA55/Phat.git
+[submodule "avi_read"]
+	path = avi_read
+	url = https://github.com/0xAA55/avi_read.git
