--- a/.cproject
+++ b/.cproject
@@ -143,7 +143,9 @@
 									<listOptionValue builtIn="false" value="USE_PWR_LDO_SUPPLY"/>
 									<listOptionValue builtIn="false" value="PHAT_FUNC=__attribute__((section(&quot;.itcm_code&quot;)))"/>
 									<listOptionValue builtIn="false" value="AVI_FUNC=__attribute__((section(&quot;.itcm_code&quot;)))"/>
+									<listOptionValue builtIn="false" value="AVI_STATIC_FUNC=__attribute__((section(&quot;.itcm_code&quot;))) static"/>
 									<listOptionValue builtIn="false" value="LCD_FUNC=__attribute__((section(&quot;.itcm_code&quot;)))"/>
+									<listOptionValue builtIn="false" value="LCD_STATIC_FUNC=__attribute__((section(&quot;.itcm_code&quot;))) static"/>
 									<listOptionValue builtIn="false" value="MEMOPS_FUNC=__attribute__((section(&quot;.itcm_code&quot;)))"/>
 									<listOptionValue builtIn="false" value="SDMMC_SWDATATIMEOUT=200"/>
 									<listOptionValue builtIn="false" value="SDMMC_DATATIMEOUT=5000000"/>
